--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^5.15.11",
     "next": "^14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
