--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-charts": "^7.3.1",
     "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
