--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-charts": "^7.3.1",
     "next": "^14.2.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
