--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/x-charts": "^7.3.1",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
+    "next-sanity": "^9.0.14",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.40.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
