--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-charts": "^7.3.1",
+    "@prisma/client": "^5.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "next-sanity": "^9.0.14",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
+    "prisma": "^5.13.0",
     "typescript": "^5"
   }
 }
