--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-charts": "^7.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "next-sanity": "^9.0.14",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.40.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.12.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "bcrypt": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "prisma": "^5.13.0",
